feat: add styles to form

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,2 +1,6 @@
+@import "./sass/constants";
 @import "./sass/base";
-@import "./sass/constants"
+@import "./sass/app";
+@import "./sass/form";
+@import "./sass/modal";
+@import "./sass/controls";
