--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1,15 +1,17 @@
-body {
+* {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  padding: 40px;
+  box-sizing: border-box;
+  outline: none;
+  color: $font-color;
+  font-size: 10px;
+  font-family: 'Ubuntu', sans-serif;
 }
 
-body * {
-  font-size: 30px;
-  color: $font-color;
+a {
+  text-decoration: none;
+}
+
+li {
+  list-style-type: none;
 }
