--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -8,10 +8,6 @@
   font-family: 'Ubuntu', sans-serif;
 }
 
-a {
-  text-decoration: none;
-}
-
-li {
-  list-style-type: none;
+.hidden {
+  display: none;
 }
