--- a/src/sass/_controls.scss
+++ b/src/sass/_controls.scss
@@ -5,3 +5,20 @@
   outline: none;
   @extend %transition;
 }
+
+.app-form__button,
+.app-modal__button {
+  margin-top: 3rem;
+  width: 100%;
+  max-width: 400px;
+  height: 50px;
+  font-size: 2rem;
+  color: #fff;
+  background: $font-color;
+  border-radius: 2px;
+  text-transform: uppercase;
+  &:hover {
+    color: #D4BADD;
+    background: #14171a;
+  }
+}
